# FolioBrake

./: .gitignore  README.md  handoff_prompt.md  package-lock.json  package.json
.claude/: settings.json
Agent/: CHANGELOG.md  MANIFEST.txt  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: audit.py  backtest.py  data.py  features.py  paper.py  risk.py  strategy.py
backend/app/audit/: cost_stress.py  grading.py  models.py  param_stability.py  regime_slicing.py  walk_forward.py
backend/app/backtest/: benchmark.py  engine.py  metrics.py  models.py
backend/app/core/: config.py
backend/app/data/: adapter.py  efinance_adapter.py  models.py  quality.py  sync.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 5398ee7db1cf_add_strategy_backtest_audit_paper_risk_.py  c3f6166a42e0_fix_add_all_model_tables.py  d7d3b819bda7_initial_data_models.py
backend/app/features/: drawdown.py  liquidity.py  models.py  momentum.py  registry.py  trend.py  volatility.py
backend/app/paper/: engine.py  models.py
backend/app/reports/: figures.py  tables.py
backend/app/risk/: models.py  overlay.py  rules.py  state_machine.py
backend/app/strategy/: constraints.py  models.py  rotation.py
backend/scripts/: seed_features.py
backend/tests/: test_api_endpoints.py  test_features_no_lookahead.py
docs/: demo_script.md  reproducibility.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
(+54 files in other folders)
