[project]
name = "retail-etf-guardian-backend"
version = "0.1.0"
description = "Risk-aware ETF rotation, audit, and do-not-trade backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
  "pydantic-settings>=2",
  "sqlalchemy>=2",
  "alembic>=1.13",
  "psycopg[binary]>=3",
  "redis>=5",
  "pandas>=2",
  "numpy>=1.26",
  "akshare>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
