[package]
name = "retail-etf-guardian"
version = "0.1.0"
description = "Retail ETF Guardian Desktop Client"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
